--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* .background {
+  background-image: url('http://www.nick.com/spongebob-squarepants');
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+} */
