--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,8 @@
 <%- include('./partials/header')%>
-
+<div style="width:100%;height:0;padding-bottom:75%;position:relative;">
+  <iframe src="https://giphy.com/embed/l3nFnauhmS5JmlH8c" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+</div>
+<p>
+  <a href="https://giphy.com/gifs/spongebob-season-2-spongebob-squarepants-l3nFnauhmS5JmlH8c">via GIPHY</a>
+</p>
 <%- include('./partials/footer')%>
