--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,11 @@
 <%- include('./partials/header')%>
-<div style="width:100%;height:0;padding-bottom:75%;position:relative;">
-  <iframe src="https://giphy.com/embed/l3nFnauhmS5JmlH8c" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<div style="width: 60%; margin: 0 auto;">
+  <div style="width:100%;height:0;padding-bottom:50%;position:relative;">
+    <iframe src="https://giphy.com/embed/l3nFnauhmS5JmlH8c" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  </div>
 </div>
 <p>
-  <a href="https://giphy.com/gifs/spongebob-season-2-spongebob-squarepants-l3nFnauhmS5JmlH8c">via GIPHY</a>
+  <a href="https://giphy.com/gifs/spongebob-season-2-spongebob-squarepants-l3nFnauhmS5JmlH8c"></a>
 </p>
+
 <%- include('./partials/footer')%>
