--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -141,8 +141,9 @@ label {
 select,
 input[type="text"],
 input[type="number"],
-input[type="date"] {
-  width: 100%;
+input[type="date"],
+input[type="submit"] {
+  width: 100%; /* Set width to 100% */
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ddd;
@@ -152,14 +153,10 @@ input[type="date"] {
 }
 
 input[type="submit"] {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
   background-color: #b5d3d3;
   color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-family: "Martian Mono", monospace;
 }
 
 input[type="submit"]:hover {
