--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <div class="nav-bar">📓🎵</div>
+      <div class="nav-bar">🎵</div>
       <a href="/" <%- title === 'Home' ? 'class="active"' : '' %>>HOME</a> |
       <% if (user) { %>
         <a href="/sessions" <%- title === 'Practice' ? 'class="active"' : '' %>>PRACTICE</a> |
